...
            android:layout_width="110dp"
            android:layout_height="73dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_textoCamasUrgencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeui"
                android:text="@string/camas_urgencia"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/lbl_numCamasUrgencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
