<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/fondoRegistro"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        style="@style/gradiente_registro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_uci_sos"
        app:layout_constraintBottom_toTopOf="@id/recuadroLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/recuadroLogin"
        style="@style/recuadro_login_registro"
        android:layout_height="416dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/recuadroLogin"
        app:layout_constraintEnd_toEndOf="@id/recuadroLogin"
        app:layout_constraintStart_toStartOf="@id/recuadroLogin"
        app:layout_constraintTop_toTopOf="@+id/recuadroLogin">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/campos_login_registro"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blanco"
            android:theme="@style/inputss">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/txtEmail"
                android:textColorHint="@color/gris" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/campos_login_registro"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blanco"
            android:theme="@style/inputss">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/txtNombre"
                android:textColorHint="@color/gris" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/campos_login_registro"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blanco"
            android:theme="@style/inputss">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/txtApellidos"
                android:textColorHint="@color/gris" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/campos_login_registro"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blanco"
            android:theme="@style/inputss"
            app:passwordToggleEnabled="true">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPwdReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtPwd"

                android:inputType="textPassword"
                android:textColorHint="@color/gris" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/campos_login_registro"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blanco"
            android:theme="@style/inputss"
            app:passwordToggleEnabled="true">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtConfirmPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtConfirmPwd"

                android:inputType="textPassword"
                android:textColorHint="@color/gris" />

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spinnerRegistro"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:textColorHint="@color/blanco" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegistro"
        style="@style/botones_login_registro"
        android:layout_width="300dp"
        android:text="@string/registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <View
        android:id="@+id/opRegistro"
        style="@style/opacity_pane"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pbRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>